<resources>
    <string name="app_name">QueLista</string>

    <string name="que_lista">QueLista, tu lista de la compra inteligente</string>
    <string name="action_settings">Opciones</string>

    <string name="open_drawer">Abrir Drawer</string>
    <string name="close_drawer">Cerrar Drawer</string>


    <!-- Nombre Actividad Ajustes-->
    <string name="title_activity_settings">Opciones</string>

    <!-- Titulos de Grupos-->
    <string name="pref_gen">General</string>
    <string name="pref_twitter">Otras</string>

    <!-- GENERALES -->
    <!-- Preferencia Miniaturas -->
    <string name="pref_miniaturas">Mostrar Miniaturas</string>

    <!-- Preferencia Número de Articulos -->
    <string name="pref_numArticulos_titulo">Número de Artículos</string>
    <string-array name="pref_numArticulos_entradas">
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
    </string-array>
    <string-array name="pref_numArticulos_valores">
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
    </string-array>
    <string name="pref_numArticulos_resumen">Número máximo de artículos en la lista</string>

    <!-- Preferencias Cuenta Twitter -->
    <string name="pref_usuario_titulo">Usuario</string>
    <string name="pref_usuario_resumen">Tu nombre de usuario en Twitter</string>

    <string name="pref_contraseña_titulo">Contraseña</string>
    <string name="pref_contraseña_resumen">Tu Contraseña de Twitter</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_description_miniaturas">Las imagenes que acompañas a los productos en los listados</string>
    <string name="action_delete_product">Eliminar producto</string>
    <string name="action_add_product">Añadir producto</string>
    <string name="producto_nombre">Nombre del producto</string>
    <string name="err_msg_vacio">No puede estár vacio</string>

    <string name="nombre_transicion_imagen">imagen_compartida</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Buscar</string>
    <string name="unitsTakes">unidad</string>
    <string name="unitsTakesMore">unidades</string>
    <string name="dayTakes">dia</string>
    <string name="dayTakesMore">dias</string>
    <string name="producto">Producto</string>
    <string name="descontarUnidades">Descontar unidades</string>
    <string name="añadirListaCompra">Añadir a la lista de la compra</string>
    <string name="cuandoQueden">Cuando queden:</string>
    <string name="añadir">Añadir:</string>
    <string name="units">unidad</string>
    <string name="escanear">Escanear</string>
    <string name="guardarCompra">Guardar compra</string>
    <string name="acerqueDispoNFC">Acerque dispositivo al lector NFC</string>
    <string name="searching">Buscar...</string>
    <string name="despensa">Despensa</string>
    <string name="Lista">Lista</string>
    <string name="carrito">Carrito</string>
    <string name="Despensa">Despensa</string>
    <string name="buscando">buscando:</string>
    <string name="se_han_añadido">Se han añadido</string>
    <string name="productos_a_la_lista_compra">productos a la lista de la compra</string>
    <string name="Aceptar">Aceptar</string>
    <string name="desea_eliminar_producto_completo">¿Desea eliminar este producto por completo?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="producto_no_esta_online">El producto no se encuentra en nuestra base de datos</string>
    <string name="desea_registrarlo">¿Desea registrarlo manualmente?</string>
    <string name="shopping_list">Lista de la compra</string>
    <string name="otras">Otras</string>
    <string name="ayuda">Ayuda</string>
    <string name="opciones">Opciones</string>
    <string name="codigo_barras">Codigo de barras</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="Desea_guardar_producto">¿Desea guardar el producto?</string>
    <string name="Camara">Cámara</string>
    <string name="Galeria">Galería</string>
    <string name="seleccionar_fuente_imagen">Seleccione la fuente de origen de la imágen</string>
    <string name="instala_explorador_archivo">Por favor, instala un explorador de archivos</string>
    <string name="productos">Productos</string>
    <string name="ticket">Ticket</string>
    <string name="producto_nuevo">Producto nuevo</string>
    <string name="escanear_codigo">Escanear código</string>
    <string name="acerca_de">Acerca de</string>
    <string name="categoria_apariencia">Apariencia</string>


</resources>
