<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/Despensa"
          android:id="@+id/nav_item_despensa"
          android:icon="@drawable/icon_button_home"/>

    <item android:title="@string/shopping_list"
          android:id="@+id/nav_item_lista"
          android:icon="@drawable/icon_button_shopping_list"/>

    <item android:title="@string/carrito"
        android:id="@+id/nav_item_carrito"
        android:icon="@drawable/icon_button_cart"/>

    <item android:title="@string/carrito"
        android:id="@+id/nav_item_new_product"
        android:icon="@android:drawable/ic_menu_add"/>

    <item android:title="@string/otras">
        <menu>
            <item
                android:title="QR"
                android:id="@+id/nav_item_qr"
                android:icon="@drawable/icon_button_shopping_list"/>
            <item
                android:title="NFC"
                android:id="@+id/nav_item_nfc"
                android:icon="@drawable/nfc"/>
        </menu>
    </item>

    <group android:id="@+id/group_settings_id">

        <item android:title="@string/opciones"
              android:id="@+id/nav_item_opciones"
              android:icon="@drawable/settings"/>
        <item android:title="@string/ayuda"
              android:id="@+id/nav_item_ayuda"
              android:icon="@drawable/help"/>
    </group>


</menu>